# aiflow_rag

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: corpus_manifest.csv  eval_rubric.md  questions.csv
