[project]
name = "aiflow-rags"
version = "0.1.0"
description = "Lightweight RAG over SEC 10-K filings"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pre-commit>=3.7.0","ruff>=0.5.5","black>=24.4.2","isort>=5.13.2"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E","F","I","B","UP","N","C90","SIM"]
